ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gateway-svc
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-api-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  ports:
    - name: api
      port: 8000
      protocol: TCP
      targetPort: http
      appProtocol: http
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller

---
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: gateway.gateway.svc.cluster.local

---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: web.gateway.svc.cluster.local
